@@ -40,18 +40,16 @@
 		<p>If you would like to operate your own tracker server, please let us know.</p>
 	
 		<ul>
-			<li><strong>UNNA</strong> operated by Morgan Aldridge<br />
-			<a href="http://unna.org:3680/">unna.org:3680</a><br />&nbsp;<br /></li>
-			<li><strong>Newton Rulez!</strong> operated by Peter Geremia<br />
-			<a href="http://tracker.geremia.me:3680/">tracker.geremia.me:3680</a><br />&nbsp;<br /></li>
-			<li><strong>Message-Pad</strong> operated by Sylvain Pilet<br />
-			<a href="http://message-pad.no-ip.org:3680/">message-pad.no-ip.org:3680</a><br />&nbsp;<br /></li>
 			<li><strong>Indigi</strong> operated by Pawel Piotrowski<br />
 			<a href="http://tracker.applenewton.co.uk:3680/">tracker.applenewton.co.uk:3680</a><br />&nbsp;<br /></li>
-
-
+			<li><strong>Newton Rulez!</strong> operated by Peter Geremia<br />
+			<a href="http://tracker.newtonrulez.com:3680/">tracker.newtonrulez.com:3680</a><br />&nbsp;<br /></li>
 
 			<!--
+			<li><strong>Message-Pad</strong> operated by Sylvain Pilet<br />
+			<a href="http://message-pad.no-ip.org:3680/">message-pad.no-ip.org:3680</a><br />&nbsp;<br /></li>
+			<li><strong>UNNA</strong> operated by Morgan Aldridge<br />
+			<a href="http://unna.org:3680/">unna.org:3680</a><br />&nbsp;<br /></li>
 			<li><strong>Newtzilla</strong> operated by Ron Parker<br />
 			<a href="http://newtzilla.quadzilla.net:3680/">http://newtzilla.quadzilla.net:3680/</a><br />&nbsp;<br /></li>
 			<li><strong>Misato</strong> operated by Victor Rehorst<br />
@@ -80,12 +78,14 @@
 		<p>In addition to the NPDS-enabled Newtons listed on the tracker servers, there are often other independent servers which do not or cannot get tracked. This can be caused port filtering or other firewall restrictions on the host network. Regardless of the cause, we&#8217;ll try to list those servers here.</p>
 
 		<ul>
+			<!--
 			<li><strong>Paul Filmer</strong><br />
 			<a href="http://newton.nsf.gov/">newton.nsf.gov</a></li>
 			<li><strong>Greg Goodwin</strong><br />
 			<a href="http://oasisnewt.ddns.net:8080/">oasisnewt.ddns.net</a></li>
 			<li><strong>Tony Kan</strong><br />
 			<a href="http://genghis7777.no-ip.org/">genghis7777.no-ip.org</a></li>
+			-->
 		</ul>
 		
 		</div>
