@@ -2,6 +2,9 @@ npds.free.fr
 
 Site Change Log:
 
+11/11/2017 (Grant Hutchinson)
+	* Updated tracker and server listings on /trackers/index.html
+
 02/06/2016 (Grant Hutchinson)
 	* Updated GIF Server Read Me with additional release details
 
